// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReleaseCommits organization release commits 1`] = `
<withApi(ReleaseCommits)
  location={Object {}}
  params={
    Object {
      "orgId": "123",
      "version": "10.0",
    }
  }
>
  <ReleaseCommits
    api={
      Client {
        "_chain": [Function],
        "_wrapRequest": [Function],
        "bulkUpdate": [Function],
        "handleRequestError": [Function],
        "hasProjectBeenRenamed": [Function],
      }
    }
    location={Object {}}
    params={
      Object {
        "orgId": "123",
        "version": "10.0",
      }
    }
  >
    <div>
      <div
        className="heading"
      />
      <Panel
        key="example/repo-name"
      >
        <Component
          className="css-1bjezgp-Panel e119nu470"
        >
          <div
            className="css-1bjezgp-Panel e119nu470"
          >
            <PanelHeader>
              <Component
                className="css-m9zvi1-PanelHeader-getPadding e1p8v8nv0"
              >
                <Flex
                  align="center"
                  className="css-m9zvi1-PanelHeader-getPadding e1p8v8nv0"
                  justify="space-between"
                >
                  <Base
                    align="center"
                    className="e1p8v8nv0 css-sniutd-PanelHeader-getPadding"
                    justify="space-between"
                  >
                    <div
                      className="e1p8v8nv0 css-sniutd-PanelHeader-getPadding"
                      is={null}
                    >
                      example/repo-name
                    </div>
                  </Base>
                </Flex>
              </Component>
            </PanelHeader>
            <PanelBody
              direction="column"
              disablePadding={true}
              flex={false}
            >
              <div
                className="css-a4ya23-textStyles"
              >
                <CommitRow
                  commit={
                    Object {
                      "author": Object {
                        "avatar": Object {
                          "avatarType": "letter_avatar",
                          "avatarUuid": null,
                        },
                        "avatarUrl": "https://example.com/avatar.png",
                        "dateJoined": "2018-02-26T23:57:43.766Z",
                        "email": "example@sentry.io",
                        "emails": Array [
                          Object {
                            "email": "example@sentry.io",
                            "id": "231605",
                            "is_verified": true,
                          },
                        ],
                        "has2fa": false,
                        "hasPasswordAuth": true,
                        "id": "224288",
                        "isActive": true,
                        "isManaged": false,
                        "isSuperuser": true,
                        "lastActive": "2018-11-30T21:25:15.222Z",
                        "lastLogin": "2018-11-30T21:18:09.812Z",
                        "name": "Foo Bar",
                        "username": "example@sentry.io",
                      },
                      "dateCreated": "2018-11-30T18:46:31Z",
                      "id": "f7f395d14b2fe29a4e253bf1d3094d61e6ad4434",
                      "message": "(improve) Add Links to Spike-Protection Email (#2408)

* (improve) Add Links to Spike-Protection Email

Users now have access to useful links from the blogs and docs on Spike-protection.

* fixed wording",
                      "repository": Object {
                        "externalSlug": "example/repo-name",
                        "id": "4",
                        "name": "example/repo-name",
                        "provider": "github",
                        "status": "active",
                        "url": "https://github.com/example/repo-name",
                      },
                    }
                  }
                  key="f7f395d14b2fe29a4e253bf1d3094d61e6ad4434"
                >
                  <PanelItem
                    align="center"
                    key="f7f395d14b2fe29a4e253bf1d3094d61e6ad4434"
                    p={2}
                  >
                    <Base
                      align="center"
                      className="css-xfqgz4-PanelItem eo8n7lk0"
                      p={2}
                    >
                      <div
                        className="css-xfqgz4-PanelItem eo8n7lk0"
                        is={null}
                      >
                        <AvatarWrapper>
                          <div
                            className="css-wh8qge-AvatarWrapper eyce8w20"
                          >
                            <Avatar
                              hasTooltip={false}
                              size={36}
                              user={
                                Object {
                                  "avatar": Object {
                                    "avatarType": "letter_avatar",
                                    "avatarUuid": null,
                                  },
                                  "avatarUrl": "https://example.com/avatar.png",
                                  "dateJoined": "2018-02-26T23:57:43.766Z",
                                  "email": "example@sentry.io",
                                  "emails": Array [
                                    Object {
                                      "email": "example@sentry.io",
                                      "id": "231605",
                                      "is_verified": true,
                                    },
                                  ],
                                  "has2fa": false,
                                  "hasPasswordAuth": true,
                                  "id": "224288",
                                  "isActive": true,
                                  "isManaged": false,
                                  "isSuperuser": true,
                                  "lastActive": "2018-11-30T21:25:15.222Z",
                                  "lastLogin": "2018-11-30T21:18:09.812Z",
                                  "name": "Foo Bar",
                                  "username": "example@sentry.io",
                                }
                              }
                            >
                              <UserAvatar
                                gravatar={false}
                                hasTooltip={false}
                                size={36}
                                user={
                                  Object {
                                    "avatar": Object {
                                      "avatarType": "letter_avatar",
                                      "avatarUuid": null,
                                    },
                                    "avatarUrl": "https://example.com/avatar.png",
                                    "dateJoined": "2018-02-26T23:57:43.766Z",
                                    "email": "example@sentry.io",
                                    "emails": Array [
                                      Object {
                                        "email": "example@sentry.io",
                                        "id": "231605",
                                        "is_verified": true,
                                      },
                                    ],
                                    "has2fa": false,
                                    "hasPasswordAuth": true,
                                    "id": "224288",
                                    "isActive": true,
                                    "isManaged": false,
                                    "isSuperuser": true,
                                    "lastActive": "2018-11-30T21:25:15.222Z",
                                    "lastLogin": "2018-11-30T21:18:09.812Z",
                                    "name": "Foo Bar",
                                    "username": "example@sentry.io",
                                  }
                                }
                              >
                                <BaseAvatar
                                  gravatarId="example@sentry.io"
                                  hasTooltip={false}
                                  letterId="example@sentry.io"
                                  round={true}
                                  size={36}
                                  style={Object {}}
                                  title="Foo Bar"
                                  tooltip="Foo Bar (example@sentry.io)"
                                  type="letter_avatar"
                                  uploadId=""
                                  uploadPath="avatar"
                                >
                                  <Tooltip
                                    containerDisplayMode="inline-block"
                                    disabled={true}
                                    position="top"
                                    title="Foo Bar (example@sentry.io)"
                                  >
                                    <StyledBaseAvatar
                                      className="avatar"
                                      loaded={true}
                                      round={true}
                                      style={
                                        Object {
                                          "height": "36px",
                                          "width": "36px",
                                        }
                                      }
                                    >
                                      <span
                                        className="avatar css-3f9bmx-StyledBaseAvatar e147uwb0"
                                        style={
                                          Object {
                                            "height": "36px",
                                            "width": "36px",
                                          }
                                        }
                                      >
                                        <LetterAvatar
                                          displayName="Foo Bar"
                                          identifier="example@sentry.io"
                                          round={true}
                                        >
                                          <Component
                                            className="css-vyy37i-LetterAvatar e12lgfev0"
                                            displayName="Foo Bar"
                                            identifier="example@sentry.io"
                                            round={true}
                                          >
                                            <svg
                                              className="css-vyy37i-LetterAvatar e12lgfev0"
                                              viewBox="0 0 120 120"
                                            >
                                              <rect
                                                fill="#847a8c"
                                                height="120"
                                                rx="15"
                                                ry="15"
                                                width="120"
                                                x="0"
                                                y="0"
                                              />
                                              <text
                                                fill="#FFFFFF"
                                                fontSize="65"
                                                style={
                                                  Object {
                                                    "dominantBaseline": "central",
                                                  }
                                                }
                                                textAnchor="middle"
                                                x="50%"
                                                y="50%"
                                              >
                                                FB
                                              </text>
                                            </svg>
                                          </Component>
                                        </LetterAvatar>
                                      </span>
                                    </StyledBaseAvatar>
                                  </Tooltip>
                                </BaseAvatar>
                              </UserAvatar>
                            </Avatar>
                          </div>
                        </AvatarWrapper>
                        <CommitMessage>
                          <div
                            className="css-bm0kt8-CommitMessage eyce8w21"
                          >
                            <Message>
                              <div
                                className="css-q4dmcs-TextOverflow-Message eyce8w22"
                              >
                                (improve) Add Links to Spike-Protection Email (#2408)
                              </div>
                            </Message>
                            <Meta>
                              <p
                                className="css-10csi2f-Meta eyce8w23"
                              >
                                <span
                                  key="4"
                                >
                                  <strong
                                    key="0"
                                  >
                                    Foo Bar
                                  </strong>
                                  <span
                                    key="1"
                                  >
                                     committed 
                                  </span>
                                  <TimeSince
                                    date="2018-11-30T18:46:31Z"
                                    key="2"
                                    suffix="ago"
                                  >
                                    <time
                                      dateTime="2018-11-30T18:46:31.000Z"
                                      title="November 30, 2018 6:46 PM UTC"
                                    >
                                      in a year
                                    </time>
                                  </TimeSince>
                                </span>
                              </p>
                            </Meta>
                          </div>
                        </CommitMessage>
                        <div>
                          <CommitLink
                            commitId="f7f395d14b2fe29a4e253bf1d3094d61e6ad4434"
                            repository={
                              Object {
                                "externalSlug": "example/repo-name",
                                "id": "4",
                                "name": "example/repo-name",
                                "provider": "github",
                                "status": "active",
                                "url": "https://github.com/example/repo-name",
                              }
                            }
                          >
                            <span>
                              f7f395d
                            </span>
                          </CommitLink>
                        </div>
                      </div>
                    </Base>
                  </PanelItem>
                </CommitRow>
              </div>
            </PanelBody>
          </div>
        </Component>
      </Panel>
    </div>
  </ReleaseCommits>
</withApi(ReleaseCommits)>
`;

exports[`ReleaseCommits project release commits 1`] = `
<withApi(ReleaseCommits)
  location={Object {}}
  params={
    Object {
      "orgId": "123",
      "projectId": "456",
      "version": "10.0",
    }
  }
>
  <ReleaseCommits
    api={
      Client {
        "_chain": [Function],
        "_wrapRequest": [Function],
        "bulkUpdate": [Function],
        "handleRequestError": [Function],
        "hasProjectBeenRenamed": [Function],
      }
    }
    location={Object {}}
    params={
      Object {
        "orgId": "123",
        "projectId": "456",
        "version": "10.0",
      }
    }
  >
    <div>
      <div
        className="heading"
      />
      <Panel
        key="example/repo-name"
      >
        <Component
          className="css-1bjezgp-Panel e119nu470"
        >
          <div
            className="css-1bjezgp-Panel e119nu470"
          >
            <PanelHeader>
              <Component
                className="css-m9zvi1-PanelHeader-getPadding e1p8v8nv0"
              >
                <Flex
                  align="center"
                  className="css-m9zvi1-PanelHeader-getPadding e1p8v8nv0"
                  justify="space-between"
                >
                  <Base
                    align="center"
                    className="e1p8v8nv0 css-sniutd-PanelHeader-getPadding"
                    justify="space-between"
                  >
                    <div
                      className="e1p8v8nv0 css-sniutd-PanelHeader-getPadding"
                      is={null}
                    >
                      example/repo-name
                    </div>
                  </Base>
                </Flex>
              </Component>
            </PanelHeader>
            <PanelBody
              direction="column"
              disablePadding={true}
              flex={false}
            >
              <div
                className="css-a4ya23-textStyles"
              >
                <CommitRow
                  commit={
                    Object {
                      "author": Object {
                        "avatar": Object {
                          "avatarType": "letter_avatar",
                          "avatarUuid": null,
                        },
                        "avatarUrl": "https://example.com/avatar.png",
                        "dateJoined": "2018-02-26T23:57:43.766Z",
                        "email": "example@sentry.io",
                        "emails": Array [
                          Object {
                            "email": "example@sentry.io",
                            "id": "231605",
                            "is_verified": true,
                          },
                        ],
                        "has2fa": false,
                        "hasPasswordAuth": true,
                        "id": "224288",
                        "isActive": true,
                        "isManaged": false,
                        "isSuperuser": true,
                        "lastActive": "2018-11-30T21:25:15.222Z",
                        "lastLogin": "2018-11-30T21:18:09.812Z",
                        "name": "Foo Bar",
                        "username": "example@sentry.io",
                      },
                      "dateCreated": "2018-11-30T18:46:31Z",
                      "id": "f7f395d14b2fe29a4e253bf1d3094d61e6ad4434",
                      "message": "(improve) Add Links to Spike-Protection Email (#2408)

* (improve) Add Links to Spike-Protection Email

Users now have access to useful links from the blogs and docs on Spike-protection.

* fixed wording",
                      "repository": Object {
                        "externalSlug": "example/repo-name",
                        "id": "4",
                        "name": "example/repo-name",
                        "provider": "github",
                        "status": "active",
                        "url": "https://github.com/example/repo-name",
                      },
                    }
                  }
                  key="f7f395d14b2fe29a4e253bf1d3094d61e6ad4434"
                >
                  <PanelItem
                    align="center"
                    key="f7f395d14b2fe29a4e253bf1d3094d61e6ad4434"
                    p={2}
                  >
                    <Base
                      align="center"
                      className="css-xfqgz4-PanelItem eo8n7lk0"
                      p={2}
                    >
                      <div
                        className="css-xfqgz4-PanelItem eo8n7lk0"
                        is={null}
                      >
                        <AvatarWrapper>
                          <div
                            className="css-wh8qge-AvatarWrapper eyce8w20"
                          >
                            <Avatar
                              hasTooltip={false}
                              size={36}
                              user={
                                Object {
                                  "avatar": Object {
                                    "avatarType": "letter_avatar",
                                    "avatarUuid": null,
                                  },
                                  "avatarUrl": "https://example.com/avatar.png",
                                  "dateJoined": "2018-02-26T23:57:43.766Z",
                                  "email": "example@sentry.io",
                                  "emails": Array [
                                    Object {
                                      "email": "example@sentry.io",
                                      "id": "231605",
                                      "is_verified": true,
                                    },
                                  ],
                                  "has2fa": false,
                                  "hasPasswordAuth": true,
                                  "id": "224288",
                                  "isActive": true,
                                  "isManaged": false,
                                  "isSuperuser": true,
                                  "lastActive": "2018-11-30T21:25:15.222Z",
                                  "lastLogin": "2018-11-30T21:18:09.812Z",
                                  "name": "Foo Bar",
                                  "username": "example@sentry.io",
                                }
                              }
                            >
                              <UserAvatar
                                gravatar={false}
                                hasTooltip={false}
                                size={36}
                                user={
                                  Object {
                                    "avatar": Object {
                                      "avatarType": "letter_avatar",
                                      "avatarUuid": null,
                                    },
                                    "avatarUrl": "https://example.com/avatar.png",
                                    "dateJoined": "2018-02-26T23:57:43.766Z",
                                    "email": "example@sentry.io",
                                    "emails": Array [
                                      Object {
                                        "email": "example@sentry.io",
                                        "id": "231605",
                                        "is_verified": true,
                                      },
                                    ],
                                    "has2fa": false,
                                    "hasPasswordAuth": true,
                                    "id": "224288",
                                    "isActive": true,
                                    "isManaged": false,
                                    "isSuperuser": true,
                                    "lastActive": "2018-11-30T21:25:15.222Z",
                                    "lastLogin": "2018-11-30T21:18:09.812Z",
                                    "name": "Foo Bar",
                                    "username": "example@sentry.io",
                                  }
                                }
                              >
                                <BaseAvatar
                                  gravatarId="example@sentry.io"
                                  hasTooltip={false}
                                  letterId="example@sentry.io"
                                  round={true}
                                  size={36}
                                  style={Object {}}
                                  title="Foo Bar"
                                  tooltip="Foo Bar (example@sentry.io)"
                                  type="letter_avatar"
                                  uploadId=""
                                  uploadPath="avatar"
                                >
                                  <Tooltip
                                    containerDisplayMode="inline-block"
                                    disabled={true}
                                    position="top"
                                    title="Foo Bar (example@sentry.io)"
                                  >
                                    <StyledBaseAvatar
                                      className="avatar"
                                      loaded={true}
                                      round={true}
                                      style={
                                        Object {
                                          "height": "36px",
                                          "width": "36px",
                                        }
                                      }
                                    >
                                      <span
                                        className="avatar css-3f9bmx-StyledBaseAvatar e147uwb0"
                                        style={
                                          Object {
                                            "height": "36px",
                                            "width": "36px",
                                          }
                                        }
                                      >
                                        <LetterAvatar
                                          displayName="Foo Bar"
                                          identifier="example@sentry.io"
                                          round={true}
                                        >
                                          <Component
                                            className="css-vyy37i-LetterAvatar e12lgfev0"
                                            displayName="Foo Bar"
                                            identifier="example@sentry.io"
                                            round={true}
                                          >
                                            <svg
                                              className="css-vyy37i-LetterAvatar e12lgfev0"
                                              viewBox="0 0 120 120"
                                            >
                                              <rect
                                                fill="#847a8c"
                                                height="120"
                                                rx="15"
                                                ry="15"
                                                width="120"
                                                x="0"
                                                y="0"
                                              />
                                              <text
                                                fill="#FFFFFF"
                                                fontSize="65"
                                                style={
                                                  Object {
                                                    "dominantBaseline": "central",
                                                  }
                                                }
                                                textAnchor="middle"
                                                x="50%"
                                                y="50%"
                                              >
                                                FB
                                              </text>
                                            </svg>
                                          </Component>
                                        </LetterAvatar>
                                      </span>
                                    </StyledBaseAvatar>
                                  </Tooltip>
                                </BaseAvatar>
                              </UserAvatar>
                            </Avatar>
                          </div>
                        </AvatarWrapper>
                        <CommitMessage>
                          <div
                            className="css-bm0kt8-CommitMessage eyce8w21"
                          >
                            <Message>
                              <div
                                className="css-q4dmcs-TextOverflow-Message eyce8w22"
                              >
                                (improve) Add Links to Spike-Protection Email (#2408)
                              </div>
                            </Message>
                            <Meta>
                              <p
                                className="css-10csi2f-Meta eyce8w23"
                              >
                                <span
                                  key="4"
                                >
                                  <strong
                                    key="0"
                                  >
                                    Foo Bar
                                  </strong>
                                  <span
                                    key="1"
                                  >
                                     committed 
                                  </span>
                                  <TimeSince
                                    date="2018-11-30T18:46:31Z"
                                    key="2"
                                    suffix="ago"
                                  >
                                    <time
                                      dateTime="2018-11-30T18:46:31.000Z"
                                      title="November 30, 2018 6:46 PM UTC"
                                    >
                                      in a year
                                    </time>
                                  </TimeSince>
                                </span>
                              </p>
                            </Meta>
                          </div>
                        </CommitMessage>
                        <div>
                          <CommitLink
                            commitId="f7f395d14b2fe29a4e253bf1d3094d61e6ad4434"
                            repository={
                              Object {
                                "externalSlug": "example/repo-name",
                                "id": "4",
                                "name": "example/repo-name",
                                "provider": "github",
                                "status": "active",
                                "url": "https://github.com/example/repo-name",
                              }
                            }
                          >
                            <span>
                              f7f395d
                            </span>
                          </CommitLink>
                        </div>
                      </div>
                    </Base>
                  </PanelItem>
                </CommitRow>
              </div>
            </PanelBody>
          </div>
        </Component>
      </Panel>
    </div>
  </ReleaseCommits>
</withApi(ReleaseCommits)>
`;
